mobile support for W and L2

--- a/src/components/bios/bios.css
+++ b/src/components/bios/bios.css
@@ -110,6 +110,12 @@
     font-size:32px;
   }
 
+  .mobileBack {
+    background-color:var(--canvas-bg);
+    color:black;
+    padding:4px;
+  }
+
   .menu {
     position:absolute;
     width:860px;
